<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounColor"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_reg"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="15dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEdtxt"
        android:layout_marginTop="112dp"
        android:layout_marginLeft="150dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTxt"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEdtxt"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="150dp"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conPasswordTxt"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="15dp"
        android:text="@string/conpassword"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/conPasswordEdtxt"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="150dp"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancleBtn"
        android:layout_marginTop="445dp"
        android:text="@string/cancel"
        android:layout_marginLeft="15dp"
        android:textColor="@color/colorBlack"
        android:onClick="onClickClose"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/submitBtn"
        android:layout_marginTop="445dp"
        android:text="@string/submit"
        android:layout_marginLeft="190dp"
        android:textColor="@color/colorBlack" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:textColor="@color/colorBlack"/>


</RelativeLayout>